website/css/main/style.css
body{
   width: 100%;
   min-width: 1300px;
   max-width: 2000px;
   margin: auto;
   background: rgb(27, 108, 210);
}

/* Navigation Bar */

#navigation_bar{
   width: 100%;
   min-width: 1000px;
   max-width: 2000px;
   background-color: rgb(22, 88, 192);
   /*position: fixed;*/
   height: 44px;
   z-index: 2;
}

#navigation_menu{
   width: 1000px;
   margin: 0 auto;
   list-style: none;
}

#navigation_menu li{
   float: left;
   font-family: 'Nunito', sans-serif;
   font-size: 18px;
   padding: 10px 0px;
   color: white;
   margin-left: -10px;
}

#navigation_menu a{
   display: block;
   text-align: center;
   width: 200px; /* fixed width - width divided by num nav items */
   text-decoration: none; 
}

#navigation_bar_spacing{
   display: block;
   height: 44px;
}

/* End Navigation Bar */

/* Header */

#header{
   height: 110px;
   background-color: rgb(22, 88, 192);
}

#attention_bar{
   background-color: rgb(255,255,216);
}

#attention_bar_text{
   width: 90%;
   margin: auto;
   color: black;
   padding: 10px;
   text-align: center;
   font-family: 'Merriweather', serif;
}

#attention_bar_close{
   height: 20px;
   float: right;
   position: relative;
   top: 10px;
   right: 10px;
}

/* Logo */

#logo_text{
   font-family: 'Merriweather', serif;
   font-size:30px;
   color: white;
   margin: 0px;
   text-align: center;
   position: relative;
   top: 40px;
}

/* End Logo */

/* Miscellaneous */
p{
   margin: 0;
}

strong{
   position: relative;
   z-index: 1;
}

table{
	text-align: center;
}

.center{
	text-align: center;
}

/* End Miscellaneous */

/* Navigation */

a:link { 
   color: white;
   text-decoration: none;
}

a:visited { 
   color: white; 
}

a:hover { 
   color: rgb(200,200,200);
}

a:active { 
   color: rgb(150,150,150); 
}

.attention_bar_link {
    color:red;
    text-decoration: none;
}

.navigation_button{
   float: right;
   font-family: 'Nunito', sans-serif;
   font-size: 19px;
   color: white;
   margin-top: 55px;
   margin-right: 2%;
}

/* End Navigation */

/* Main Content */

#main_body{
    background-color: rgb(39, 139, 200);
    float: right; 
}

#main_content{
   float: right;
}

#main_content_text{
	width: 90%;
   margin: auto;
   color: white;
   font-family: 'Nunito', sans-serif;
   font-size: 18px;
 	text-align: justify;
}

#home_info {
   padding:20px;
}

.menu_item{
	width: 30%;
	float: left;
	text-align: center;
	position: relative;
}

.mainList{
	width: 100%;
	margin-left: 5%;
	position: relative;
	overflow: hidden;
}
/* End Main Content */

/* Side Bar */

#sidebar{
   width: 400px;
   float: right;
   background-color: rgba(4, 84, 200, 0.4);
}

#sidebar_info{
   color: white;
   font-family: 'Nunito', sans-serif;
   font-size: 20px;
   text-align: center;
}

.sidebar_info_small{
   font-size: 16px;
}

#search_bar{
	color: white;
	font-family: 'Nunito', sans-serif;
   font-size: 16px;
   text-align: center;
}

#searchTags{
	width: 90%;
	text-align: center;
}

#search_index{
	width: 500px;
	margin: auto;
	text-align: center;
}

/* End Side Bar */

/* Footer */

#copyright{
   font-family: 'Nunito', sans-serif;
   font-size: 15px;
   width: 100%;
   color: white;
   text-align: center;
   background-color: rgb(22, 88, 192);
   padding: 10px 0px;
   float: right;
}

/* End Footer */

